--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 <div id="container">
   <%= render 'layouts/nav' %>
   <%= yield %>
+  <%= debug(params) %>
 </div>
 <%= render 'layouts/footer' %>
 </body>
