--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,7 @@
     <% @articles.each do |article| %>
     <li>
       <%= link_to article.title, article %>
-      <% if @user %>
+      <% if logged_in? %>
           <%= link_to 'edit', edit_article_path(article) %><%= link_to 'delete', article_path(article), method: :delete, data: { confirm: "Are you sure?" } %>
       <% end %>
       <span><%= article.created_at.strftime("%d %b %Y") %></span>
