--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,3 @@
-<footer>
-  <span>©Alivin.All RightsReserved.</span><br>
-  <a href="#">build with Jekyll using Scribble theme</a>
-</footer>
+<div class="footer">
+  <p>copied from <a class="active" href="http://v3.bootcss.com/examples/jumbotron-narrow/">jumbotron</a> for studies.</p>
+</div>
