--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,21 @@
-<header>
-  <a href="<%= root_path %>"><img src="/assets/child.jpg"></a>
-  <p>a web developer</p>
-</header>
+<div class="header">
+  <ul class="nav nav-pills pull-right" role="tablist">
+    <li role="presentation" class="active"><a href="/">Home</a></li>
+    <li role="presentation"><a href="/about">About</a></li>
+    <% if logged_in? %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.name %><b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Settings", current_user %></li>
+            <li class="divider"></li>
+            <li>
+              <%= link_to "Log out", signout_path %>
+            </li>
+          </ul>
+        </li>
+    <% else %>
+        <li role="presentation"><a href="/login">Login</a></li>
+    <% end %>
+  </ul>
+  <h3 class="text-muted">Blog</h3>
+</div>
