--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,10 @@
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 <body>
-<%= render 'layouts/header' %>
-<div id="container">
-  <%= render 'layouts/nav' %>
+<div class="container">
+  <%= render 'layouts/header' %>
   <%= yield %>
-  <%= debug(params) %>
-</div>
-<%= render 'layouts/footer' %>
+  <%= render 'layouts/footer' %>
+</div>      <!-- /container -->
 </body>
 </html>
