--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,7 @@
 <%= provide(:title, '关于我 - alivin') %>
-<br><br><br>
-<br><br><br>
-the rails way of a developer
+
+<div class="presence">
+  <h1>Alivin's Blog</h1>
+  <p class="lead">just a blog development</p>
+  <p><a class="btn btn-lg btn-success" href="/signup">Sign up today</a></p>
+</div>
