--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,10 @@
 <%= provide(:title, 'Alivin') %>
-<%= render 'articles/feed' %>
+
+<div class="row marketing">
+  <% @articles.each do |article| %>
+      <div class="col-lg-6">
+        <h4><%= link_to article.title, article %> </h4>
+        <p>Text contains presences the text.</p>
+      </div>
+  <% end %>
+</div>
