--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,3 +3,8 @@
 <%= render 'form' %>
 
 <%= link_to 'Back', users_path %>
+
+
+<form class="form-signin" role="form">
+  <h2>Please Sign in</h2>
+</form>
