--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,7 @@
-<%= provide(:title, '关于我 - alivin') %>
+<%= provide(:title, 'About') %>
 
 <div class="presence">
   <h1>Alivin's Blog</h1>
   <p class="lead">just a blog development</p>
-  <p><a class="btn btn-lg btn-success" href="/signup">Sign up today</a></p>
+  <p><a class="btn btn-lg btn-success" href="/signup">Sign up now</a></p>
 </div>
