--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<%= provide(:title, 'Alivin') %>
+<%= provide(:title, 'Home') %>
 
 <div class="row marketing">
   <% @articles.each do |article| %>
