--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,5 +3,6 @@
 <div class="presence">
   <h1>Alivin's Blog</h1>
   <p class="lead">just a blog development</p>
+  <p><%= link_to "write a blog", new_article_path %></p>
   <p><a class="btn btn-lg btn-success" href="/signup">Sign up now</a></p>
 </div>
