--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
 <div class="footer">
-  <p>copied from <a class="active" href="http://v3.bootcss.com/examples/jumbotron-narrow/">jumbotron</a> for studies.</p>
+  <p>copied from <a class="active" href="http://v3.bootcss.com/examples/jumbotron-narrow/">jumbotron</a> for studies.<span style="float: right"><%= link_to "write a new blog", new_article_path if logged_in? && yield(:title) == "Home" %></span></p>
 </div>
