--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       <div class="alert alert-<%= message_type %>"><%= message %></div>
   <% end %>
   <%= yield %>
+  <%= debug(params) %>
   <%= render 'layouts/footer' %>
 </div>      <!-- /container -->
 </body>
